Fix sidebar scroll bug on tablets

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -90,9 +90,7 @@
 }
 
 .navigation-touch {
-  @media (min-width: $breakpoint-medium) {
-    overflow-y: auto;
-  }
+  overflow-y: auto !important;
 }
 
 .navigation--push-back {
